--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,21 @@
       "src": "favicon.ico",
       "sizes": "48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
